--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,3 +7,14 @@ body {
 ::-webkit-scrollbar {
   width: 0;
 }
+
+.view {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
