--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,3 +18,13 @@ body {
   margin: 0;
   padding: 0;
 }
+
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+
+    to {
+      transform: rotate(360deg);
+    }
+  }
