--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,7 +14,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
 
   & > * {
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
