--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,6 +32,11 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
+  .container {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @keyframes rotation {
