--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -50,12 +50,12 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  display: grid;
-  place-items: center;
+
   background-color: #eee;
 }
 
 .container {
   width: 100%;
   height: 100%;
+  max-width: 100%;
 }
