获取指定文件的二级标题内容并返回

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -17,7 +17,7 @@ body {
   scrollbar-track-color: #f0f0f0;
   scrollbar-width: 0px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   position: relative;
 }
 
